--- a/compiler-ci.opam
+++ b/compiler-ci.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "3.7"}
   "current"
   "current_github"
+  "current_docker"
   "cmdliner" {>= "1.1.0"}
   "odoc" {with-doc}
 ]
