--- a/service/dune
+++ b/service/dune
@@ -1,6 +1,4 @@
-; (library
-;  (name compiler_ci_service)
-;  (public_name compiler-ci-service)
-;  (libraries
-;   current)
-;  (modules pipeline))
+(library
+ (name compiler_ci_service)
+ (public_name compiler-ci-service)
+ (libraries current current.cache current_github current_docker cmdliner))
