Lower-bound OCaml to 4.14

--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -6,7 +6,7 @@ authors: ["benmandrew@gmail.com"]
 homepage: "https://github.com/benmandrew/multicoretests-ci"
 bug-reports: "https://github.com/benmandrew/multicoretests-ci/issues"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.14"}
   "dune" {>= "3.7"}
   "logs"
   "fmt"
