Restrict ocaml-version and dockerfile-opam

--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -16,9 +16,9 @@ depends: [
   "current_docker"
   "current_ocluster"
   "cmdliner" {>= "1.1.0"}
-  "dockerfile-opam"
+  "dockerfile-opam" {>= "8.2.1"}
   "obuilder-spec"
-  "ocaml-version"
+  "ocaml-version" {>= "3.6.1"}
   "odoc" {with-doc}
 ]
 build: [
