Restrict obuilder-spec

--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -17,7 +17,7 @@ depends: [
   "current_ocluster"
   "cmdliner" {>= "1.1.0"}
   "dockerfile-opam" {>= "8.2.1"}
-  "obuilder-spec"
+  "obuilder-spec" {>= "0.5.1"}
   "ocaml-version" {>= "3.6.1"}
   "odoc" {with-doc}
 ]
