Restrict OCurrent packages

--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -11,10 +11,10 @@ depends: [
   "logs"
   "fmt"
   "capnp-rpc-lwt"
-  "current"
-  "current_github"
-  "current_docker"
-  "current_ocluster"
+  "current" {>= "0.6.4"}
+  "current_github" {>= "0.6.4"}
+  "current_docker" {>= "0.6.4"}
+  "current_ocluster" {>= "0.2.1"}
   "cmdliner" {>= "1.1.0"}
   "dockerfile-opam" {>= "8.2.1"}
   "obuilder-spec" {>= "0.5.1"}
