--- a/multicoretests-ci.opam
+++ b/multicoretests-ci.opam
@@ -11,9 +11,9 @@ depends: [
   "logs"
   "fmt"
   "capnp-rpc-unix"
-  "current"
-  "current_github"
-  "current_docker"
+  "current" {>= "0.6.4"}
+  "current_github" {>= "0.6.4"}
+  "current_docker" {>= "0.6.4"}
   "cmdliner" {>= "1.1.0"}
   "odoc" {with-doc}
 ]
