--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -19,6 +19,7 @@ depends: [
   "dockerfile-opam" {>= "8.2.1"}
   "obuilder-spec" {>= "0.5.1"}
   "ocaml-version" {>= "3.6.1"}
+  "ansi" {>= "0.6.0"}
   "odoc" {with-doc}
 ]
 build: [
