--- a/multicoretests-ci-lib.opam
+++ b/multicoretests-ci-lib.opam
@@ -6,18 +6,20 @@ authors: ["benmandrew@gmail.com"]
 homepage: "https://github.com/benmandrew/multicoretests-ci"
 bug-reports: "https://github.com/benmandrew/multicoretests-ci/issues"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.14"}
   "dune" {>= "3.7"}
   "logs"
   "fmt"
   "capnp-rpc-lwt"
-  "current"
-  "current_github"
-  "current_docker"
-  "current_ocluster"
+  "current" {>= "0.6.4"}
+  "current_github" {>= "0.6.4"}
+  "current_docker" {>= "0.6.4"}
+  "current_ocluster" {>= "0.2.1"}
   "cmdliner" {>= "1.1.0"}
-  "dockerfile-opam"
-  "obuilder-spec"
+  "dockerfile-opam" {>= "8.2.1"}
+  "obuilder-spec" {>= "0.5.1"}
+  "ocaml-version" {>= "3.6.1"}
+  "ansi" {>= "0.6.0"}
   "odoc" {with-doc}
 ]
 build: [
